Front - CadastrarPostagemComponent, formulario alterado para ReactiveForms

--- a/Front/src/app/Pages/Postagem/cadastrar-postagem/cadastrar-postagem.component.html
+++ b/Front/src/app/Pages/Postagem/cadastrar-postagem/cadastrar-postagem.component.html
@@ -1,17 +1,59 @@
-<form (ngSubmit)="cadastrar()">
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
   <div id="caixa">
-    <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Titulo</label>
-      <input type="text" class="form-control" id="inputTitulo" aria-describedby="emailHelp" [(ngModel)]="titulo" name="titulo" autocomplete="off">
+    
+    <!-- mostra um alerta caso o backEnd retorne algum erro -->
+    <div *ngIf="serverErrors?.length" class="alert alert-danger">
+      <div *ngFor="let msg of serverErrors">{{msg}}</div>
     </div>
+
+    <!-- Titulo -->
     <div class="mb-3">
-      <label for="exampleInputPassword1" class="form-label">Conteudo</label>
+      <label for="titulo" class="form-label">Titulo</label>
+
+      <!-- [class.is-invalid]="titulo?.touched && titulo?.invalid" garante que o titulo so pode ser atribuido como invalida caso ja tenha tido uma primeira interação com o input -->
+      <input type="text" 
+      class="form-control" 
+      id="inputTitulo"
+      formControlName="titulo" 
+      [class.is-invalid]="titulo?.touched && titulo?.invalid" 
+      name="titulo" 
+      autocomplete="off"
+      placeholder="Título da postagem">
+
+      <!-- Tratativa de errors -->
+      <div *ngIf="titulo?.touched && titulo?.invalid" class="invalid-feedback d-block">
+        <!-- trata as condições que foram estabelecidas para o input -->
+        <div *ngIf="titulo?.errors?.['required']">O titulo é obrigatorio</div>
+        <div *ngIf="titulo?.errors?.['minlength']">O titulo precisa ter no minimo 3 caracteres</div>
+        <div *ngIf="titulo?.errors?.['apenasEspacos']">O titulo não pode ter apenas espaços</div>
+      </div>
+
+    </div>
+
+    <!-- Conteudo -->
+    <div class="mb-3">
+      <label for="conteudo" class="form-label">Conteudo</label>
       <br>
-      <textarea id="inputConteudo" name="conteudo" [(ngModel)]="conteudo"></textarea>
+      <textarea id="inputConteudo" 
+      name="conteudo" 
+      class="form-control"
+      formControlName="conteudo"
+      [class.is-invalid]="conteudo?.touched && conteudo?.invalid"
+      placeholder="Escreva aqui..."></textarea>
+
+      <!-- Tratativa de errors -->
+      <div *ngIf="conteudo?.touched && conteudo?.invalid" class="invalid-feedback d-block">
+        <!-- trata as condições que foram estabelecidas para o input -->
+        <div *ngIf="conteudo?.errors?.['required']">O conteudo é obrigatorio</div>
+        <div *ngIf="conteudo?.errors?.['minlength']">O conteudo precisa ter no minimo 3 caracteres</div>
+        <div *ngIf="conteudo?.errors?.['apenasEspacos']">O conteudo não pode ter apenas espaços</div>
+      </div>
+      
     </div>
-    <button type="submit" class="btn btn-outline-success">Postar</button>
-    <div class="alerta" *ngIf="mostrarMsg">
-      <p id="msgAlerta">{{msg}}</p>
-    </div>
+
+    <button type="submit" class="btn btn-outline-success" [disabled]="form.invalid || isSubmitting">
+      <span *ngIf="!isSubmitting">Postar</span>
+      <span *ngIf="isSubmitting">Enviando...</span>
+    </button>
   </div>
-</form> 
+</form>  
