--- a/Front/src/app/Pages/Seguidores/listar-seguindo/listar-seguindo.component.html
+++ b/Front/src/app/Pages/Seguidores/listar-seguindo/listar-seguindo.component.html
@@ -2,7 +2,7 @@
   <h1>Seguindo</h1>
   <div id="infoSeguidos" *ngFor="let s of seguidos">
     <p id="nome">{{s.nome}}</p>
-    <button class="texto-clicavel"> 
+    <button class="texto-clicavel" (click)="navegarParaPerfil(s.id)"> 
         <p id="userName">@{{s.userName}}</p>
     </button>
     <hr>
