--- a/Front/src/app/Pages/UI/Feed/feed-page/feed-page.component.html
+++ b/Front/src/app/Pages/UI/Feed/feed-page/feed-page.component.html
@@ -1,5 +1,6 @@
 <div id="caixa">
     <div id="divEsquerda">
+        <!-- <img id="logo" src="assets/IMG/Logo.png"> -->
         <div id="userInfo">
             <p>{{usuario?.nome}}</p>
             <button class="texto-clicavel" (click)="navegarPerfilPage()">
