--- a/Front/src/app/Pages/UI/Perfil/perfil-page/perfil-page.component.html
+++ b/Front/src/app/Pages/UI/Perfil/perfil-page/perfil-page.component.html
@@ -34,7 +34,7 @@
                 <span>Excluir</span>
             </button>
 
-            <button mat-menu-item (click)="teste()">
+            <button mat-menu-item (click)="logout()">
                 <mat-icon>logout</mat-icon>
                 <span>Sair</span>
             </button>
