--- a/Front/src/app/Pages/Usuario/cadastrar-usuario/cadastrar-usuario.component.scss
+++ b/Front/src/app/Pages/Usuario/cadastrar-usuario/cadastrar-usuario.component.scss
@@ -18,21 +18,13 @@
 #toggleSenha{
     border: none;
     background-color: transparent;
+} 
+
+.alert-success{
+  background-color: transparent;
 }
 
-.alerta{
-    display: flex;
-    align-self: center;
-    align-items: center;
-    justify-content: center;
-    width: 200px;
-    height: 100px;
-    border: 2px solid green;
-    border-radius: 15px;
-    margin: 20px;
-}
-
-#msgAlerta{
-    font-size: 15px;
-    text-align: center;
+#btnBack{
+  background-color: transparent;
+  border: none;
 }
