Front: FormGroup implementado em todos os formularios, seta para retornar a pagina anterior implementado

--- a/Front/src/app/Pages/Postagem/cadastrar-postagem/cadastrar-postagem.component.scss
+++ b/Front/src/app/Pages/Postagem/cadastrar-postagem/cadastrar-postagem.component.scss
@@ -35,3 +35,8 @@ button{
 .alert-success{
   background-color: transparent;
 }
+
+#btnBack{
+    background-color: transparent;
+    border: none;
+}
