--- a/Front/src/app/Pages/Seguidores/listar-seguidores/listar-seguidores.component.html
+++ b/Front/src/app/Pages/Seguidores/listar-seguidores/listar-seguidores.component.html
@@ -1,3 +1,9 @@
+<div class="mt-4 ms-5">
+  <button id="btnBack" (click)="voltarPagina()">
+    <mat-icon>arrow_back</mat-icon>
+  </button>
+</div>
+
 <div id="caixa">
   <h1>Seguidores</h1>
   <div id="infoSeguidos" *ngFor="let s of seguidores">
