--- a/Front/src/app/Pages/UI/Perfil/perfil-page/perfil-page.component.html
+++ b/Front/src/app/Pages/UI/Perfil/perfil-page/perfil-page.component.html
@@ -1,3 +1,9 @@
+<div class="mt-4 ms-5">
+  <button id="btnBack" (click)="voltarPagina()">
+    <mat-icon>arrow_back</mat-icon>
+  </button>
+</div>
+
 <div id="caixa">
     <div id="userInfo">
         <h1>Olá <strong>{{usuario?.nome}}</strong> seja bem vindo(a) a página do seu perfil :]</h1>
