--- a/Front/src/app/Pages/Seguidores/listar-seguindo/listar-seguindo.component.scss
+++ b/Front/src/app/Pages/Seguidores/listar-seguindo/listar-seguindo.component.scss
@@ -26,3 +26,8 @@ hr{
     text-decoration: underline;
     color: darkblue;
 }
+
+#btnBack{
+    background-color: transparent;
+    border: none;
+}
