--- a/Front/src/app/Pages/UI/Perfil/perfil-usuarios/perfil-usuarios.component.html
+++ b/Front/src/app/Pages/UI/Perfil/perfil-usuarios/perfil-usuarios.component.html
@@ -1,3 +1,9 @@
+<div class="mt-4 ms-5">
+  <button id="btnBack" (click)="voltarPagina()">
+    <mat-icon>arrow_back</mat-icon>
+  </button>
+</div>
+
 <div id="caixa">
     <!-- Informações do perfil do usuario -->
     <div id="userInfo">
